update blitz design and scoring

--- a/blitz.html
+++ b/blitz.html
@@ -99,6 +99,7 @@
         <p>Le jeu se joue au click dans le cadre, cela déclenche la chute d'une bombe.</p>
         <p>Le but est de détruire tous les immeubles avant que l'avion ne les percute.</p>
         <p>Une nouvelle bombe est chargée dès que la première a terminé sa chute.</p>
+        <p>L'algorythme de score est secret, à vous de le deviner si cela vous amuse. Par contre, le score n'est valable que si vous terminez le jeu</p>
       </article>
 
     </main>
