--- a/bonus.html
+++ b/bonus.html
@@ -95,7 +95,7 @@
 
         <article id="snake">
             <h3><img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Le Mythique "SNAKE"</h3>
-            <img src="/assets/snake.jpg" alt="jeu snake"class="img-fluid mb-3 shadow" title="écran type du jeu de Snake">
+            <img src="/assets/snake.jpg" alt="jeu snake"class="img-fluid mb-3 shadow">
             <p>Un gameplay inventé en 1976 avec le jeu Blockade, que l'on retrouve dans des jeux comme Worm en 1978, Tron et Nibbler en 1982.</p>
             <p>Il est également connu pour les différentes version de Snake parues à partir de 1997 sur Nokia 6610</p>
             <a class="btn btn-secondary" href="snake.html">Essayer le jeu</a>
@@ -106,7 +106,7 @@
 
         <article id="blitz">
           <h3><img src="/assets/favicon.ico" alt="mini-logo" class="icone"> SUPER BLITZ</h3>
-          <img src="/assets/blitz.jpg" alt="jeu blitz"class="img-fluid mb-3 shadow" title="écran type du jeu de Blitz">
+          <img src="/assets/blitz.jpg" alt="jeu blitz"class="img-fluid mb-3 shadow">
           <p>Basé sur le gameplay d'un jeu sorti en 1983 sur Commodore64</p>
           <p>Le jeu est jouable, mais il me reste encore à travailler les graphismes, et à ajouter le passage du gorille sur les immeubles</p>
           <a class="btn btn-secondary" href="blitz.html">Essayer le jeu</a>
