add some minor display corrections

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <meta name="twitter:site" content="@PierreloupPerez">
   <meta name="twitter:creator" content="@PierreloupPerez">
   <meta property="fb:app_id" content="444629953848287">
+  
 
 </head>
 
@@ -220,7 +221,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="container-fluid row text-center justify-content-center pt-3">
+  <footer class="row text-center justify-content-center pt-3 mx-1">
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
