--- a/presentation.html
+++ b/presentation.html
@@ -198,7 +198,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="container-fluid row text-center justify-content-center pt-3">
+  <footer class="row text-center justify-content-center pt-3 mx-1">
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
