add few details visually

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta name="twitter:site" content="@PierreloupPerez">
   <meta name="twitter:creator" content="@PierreloupPerez">
   <meta property="fb:app_id" content="444629953848287">
-  
+
 
 </head>
 
@@ -38,7 +38,7 @@
   <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand ms-3" href="index.html">
-        <img src="/assets/android-chrome-192x192.png" alt="logo Pilou Dev">
+        <img src="/assets/android-chrome-192x192.png" alt="logo Pilou Dev" class="border border-primary">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
         aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,9 +118,9 @@
             border-primary
             col-12 col-sm-6 col-md-4
           ">
-        <img class="card-img-top mt-2 border border-light" src="/assets/pilou_artreduit.jpg"
-          alt="ecran d'accueil pilou_art" title="Page d'accueil de Pilou_art galerie d'images" />
         <div class="card-header bg-primary bg-opacity-25 border border-light">
+          <img class="card-img-top mb-2" src="/assets/pilou_artreduit.jpg" alt="ecran d'accueil pilou_art"
+            title="Page d'accueil de Pilou_art galerie d'images" />
           Galerie d'image
         </div>
         <div class="card-body">
@@ -150,9 +150,9 @@
             border-primary
             col-12 col-sm-6 col-md-4
           ">
-        <img class="card-img-top mt-2 border border-light" src="/assets/maitressegereduit.jpg"
-          alt="ecran d'accueil maitresse gé" title="Page d'accueil du Blog de Maitresse Gé, Instagrameuse" />
-        <div class="card-header bg-primary bg-opacity-25 border border-light">
+          <div class="card-header bg-primary bg-opacity-25 border border-light">
+          <img class="card-img-top mb-2" src="/assets/maitressegereduit.jpg"
+            alt="ecran d'accueil maitresse gé" title="Page d'accueil du Blog de Maitresse Gé, Instagrameuse" />
           Wordpress
         </div>
         <div class="card-body">
@@ -182,9 +182,9 @@
             border-primary
             col-12 col-sm-6 col-md-4
           ">
-        <img class="card-img-top mt-2 border border-light" src="/assets/portfolioreduit.jpg" alt="ecran CV portfolio"
-          title="Page du CV de Pierre-Loup Perez - Web Developper" />
-        <div class="card-header bg-primary bg-opacity-25 border border-light">
+          <div class="card-header bg-primary bg-opacity-25 border border-light">
+          <img class="card-img-top mb-2" src="/assets/portfolioreduit.jpg" alt="ecran CV portfolio"
+            title="Page du CV de Pierre-Loup Perez - Web Developper" />
           Portfolio
         </div>
         <div class="card-body">
