--- a/mentions.html
+++ b/mentions.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand ms-3" href="index.html">
-          <img src="/assets/android-chrome-192x192.png" alt="logo Pilou Dev">
+          <img src="/assets/android-chrome-192x192.png" alt="logo Pilou Dev" class="border border-primary">
         </a>
         <button
           class="navbar-toggler"
