--- a/presentation.html
+++ b/presentation.html
@@ -28,7 +28,7 @@
   <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand ms-3" href="index.html">
-        <img src="/assets/android-chrome-192x192.png" alt="logo Pilou Dev">
+        <img src="/assets/android-chrome-192x192.png" alt="logo Pilou Dev" class="border border-primary">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
         aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
