update tech used in cv and pres

--- a/cv.html
+++ b/cv.html
@@ -97,28 +97,35 @@
           </h3>
           <section class="row align-items-center">
             <h4 class="col-12 col-lg-2">WebDev</h4>
-            <p class="col-12 col-lg-3">
-              <img src="/assets/htmlCssJs.png" alt="HtmlCssJs" class="icone" title="Icone HtmlCssJs">
+            <p class="col-12 col-lg-5">
+              <img src="/assets/html.png" alt="Html" class="icone" title="Html 5">
+              <img src="/assets/css.png" alt="Css" class="icone" title="Css 3">
+              <img src="/assets/js.png" alt="Js" class="icone" title="Js">
+              <img src="/assets/php-logo-png-transparent.png" alt="Php" class="icone" title="Php">
+              <img src="/assets/bootstrap-logo.png" alt="bootstrap" class="icone" title="Bootstrap">
+              <img src="/assets/tailwind.png" alt="tailwind" class="icone" title="Tailwind Css">
             </p>
             <p class="col-12 col-lg-4">
-              <img src="/assets/git.png" alt="git" class="icone" title="Icone Git">
-              <img src="/assets/github.png" alt="github" class="icone" title="Icone Github">
-              <img src="/assets/laravel.png" alt="laravel" class="icone" title="Icone Laravel">
-              <img src="/assets/java.png" alt="java" class="icone" title="Icone Java">
+              <img src="/assets/nodejs-1-logo.png" alt="NodeJs" class="icone" title="Node Js">
+              <img src="/assets/mysql-5-logo-png-transparent.png" alt="Mysql" class="icone" title="Mysql">
+              <img src="/assets/laravel.png" alt="Laravel" class="icone" title="Laravel">
+              <img src="/assets/java.png" alt="Java" class="icone" title="Java">
+              <img src="/assets/wordpress_PNG51.png" alt="Wordpress" class="icone" title="Wordpress">
             </p>
           </section>
           <hr class="mx-5">
           <section class="row">
             <h4 class="col-12 col-lg-2">Divers</h4>
-            <p class="col-12 col-lg-3">
-              <img src="/assets/word.png" alt="word" class="icone" title="Icone Word">
-              <img src="/assets/powerpoint.png" alt="powerpoint" class="icone" title="Icone Powerpoint">
-              <img src="/assets/excel.png" alt="excel" class="icone" title="Icone Excel">
+            <p class="col-12 col-lg-5">
+              <img src="/assets/git.png" alt="git" class="icone" title="Git">
+              <img src="/assets/github.png" alt="github" class="icone" title="Github">
+              <img src="/assets/vscode-logo-2.png" alt="VsCode" class="icone" title="VsCode">
+              <img src="/assets/Microsoft_Office-Logo.png" alt="microsoft office" class="icone" title="Office">
             </p>
             <p class="col-12 col-lg-4">
-              <img src="/assets/protools.png" alt="protools" class="icone" title="Icone Protools">
-              <img src="/assets/finale.png" alt="finale" class="icone" title="Icone Finale">
-              <img src="/assets/samplitude.png" alt="samplitude" class="icone" title="Icone Samplitude">
+              <img src="/assets/protools.png" alt="protools" class="icone" title="Avid Protools">
+              <img src="/assets/finale.png" alt="finale" class="icone" title="Makemusic Finale">
+              <img src="/assets/samplitude.png" alt="samplitude" class="icone" title="Magix Samplitude">
             </p>
           </section>
           <hr class="mx-5">
@@ -177,7 +184,7 @@
       </div>
 
       <!-- Colonne de droite -->
-      <aside class="col-12 col-md-4 border-start">
+      <aside class="col-12 col-md-4 border-start mt-3">
         <h3 class="alert alert-secondary shadow-sm">
           <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Formations
         </h3>
