--- a/presentation.html
+++ b/presentation.html
@@ -103,12 +103,14 @@
           <li>Javascript</li>
           <li>Scss/Sass</li>
           <li>Bootstrap</li>
+          <li>Tailwind</li>
           <li>Wordpress</li>
         </ul>
       </section>
       <section class="col-12 col-sm-6">
         <h4>Back-end:</h4>
         <ul>
+          <li>NodeJs</li>
           <li>PHP/mySql phpMyAdmin</li>
           <li>Laravel framework</li>
           <li>API Rest avec laravel<br>Coté api et coté client</li>
@@ -119,8 +121,8 @@
         <ul>
           <li>UX et UI</li>
           <li>SEO et referencement</li>
-          <li>Accessibilité</li>
           <li>Responsivité</li>
+          <li>Accessibilité</li>
         </ul>
       </section>
     </article>
