add certif in cv

--- a/cv.html
+++ b/cv.html
@@ -144,6 +144,7 @@
         </article>
 
         <hr class="mx-5">
+
         <!-- Expériences -->
         <article>
           <h3 class="alert alert-secondary shadow-sm">
@@ -167,14 +168,18 @@
                 </ul>
             </div>
           </section>
+
           <hr class="mx-5">
+
           <section class="row align-items-center">
             <h4 class="col-12 col-lg-3">2011-2014</h4>
             <p class="col-12 col-lg-9"><span class="text-primary">Professeur de cor</span> - Conservatoire d’Heyrieux
               (38)<br>
               Encadrement d'ensembles d'élèves</p>
           </section>
+
           <hr class="mx-5">
+
           <section class="row align-items-center">
             <h4 class="col-12 col-lg-3">2010-2011</h4>
             <p class="col-12 col-lg-9"><span class="text-primary">Vendeur</span> à la Brioche Dorée</p>
@@ -184,32 +189,59 @@
       </div>
 
       <!-- Colonne de droite -->
-      <aside class="col-12 col-md-4 border-start mt-3">
-        <h3 class="alert alert-secondary shadow-sm">
-          <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Formations
-        </h3>
-        <section>
-          <h4>2021-2022</h4>
-          <p>Développeur Web et Web Mobile au GRETA Lyon-Métropole</p>
-        </section>
-        <section>
-          <h4>2014-2015</h4>
-          <p>Sous-officier (cadre) de l’armée de terre au sein de l’école nationale des sous-officiers d’active de
-            Saint-Maixent</p>
-        </section>
-        <section>
-          <h4>2008-2010</h4>
-          <p>Formation à l’enseignement musical au sein de conservatoire national d’Amiens</p>
-        </section>
-        <section>
-          <h4>2004-2008</h4>
-          <p>Diplôme d’Etudes Musicales au conservatoire national de Lyon</p>
-        </section>
-        <section>
-          <h4>2003-2004</h4>
-          <p>Baccalauréat Scientifique (option Sciences de la vie et de la terre)</p>
-        </section>
-      </aside>
+      <div class="col-12 col-md-4 border-start mt-3">
+
+        <!-- Formations -->
+        <aside>
+          <h3 class="alert alert-secondary shadow-sm">
+            <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Formations
+          </h3>
+          <section>
+            <h4>2021-2022</h4>
+            <p>Développeur Web et Web Mobile au GRETA Lyon-Métropole</p>
+          </section>
+          <section>
+            <h4>2014-2015</h4>
+            <p>Sous-officier (cadre) de l’armée de terre au sein de l’école nationale des sous-officiers d’active de
+              Saint-Maixent</p>
+          </section>
+          <section>
+            <h4>2008-2010</h4>
+            <p>Formation à l’enseignement musical au sein de conservatoire national d’Amiens</p>
+          </section>
+          <section>
+            <h4>2004-2008</h4>
+            <p>Diplôme d’Etudes Musicales au conservatoire national de Lyon</p>
+          </section>
+          <section>
+            <h4>2003-2004</h4>
+            <p>Baccalauréat Scientifique (option Sciences de la vie et de la terre)</p>
+          </section>
+        </aside>
+
+        <hr class="mx-5">
+
+        <!-- Certifications -->
+        <aside>
+          <h3 class="alert alert-secondary shadow-sm col-12">
+            <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Certifications
+          </h3>
+          <section class="row align-items-center mt-3">
+            <a href="/assets/cert-JS-SoloLearn.png" class="col-12 col-lg-4">
+              <img src="/assets/cert-JS-SoloLearn.png" alt=""class="certif border shadow-sm">
+            </a>
+            <p class="col-12 col-lg-8">Javascript @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
+          </section>
+          <section class="row align-items-center mt-3">
+            <a href="/assets/cert-PHP-SoloLearn.jpg" class="col-12 col-lg-4">
+              <img src="/assets/cert-PHP-SoloLearn.jpg" alt=""class="certif border shadow-sm">
+            </a>
+            <p class="col-12 col-lg-8">PHP @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
+          </section>
+        </aside>
+
+
+      </div>
 
     </div>
 
