add html certif

--- a/cv.html
+++ b/cv.html
@@ -226,18 +226,30 @@
           <h3 class="alert alert-secondary shadow-sm col-12">
             <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Certifications
           </h3>
-          <section class="row align-items-center mt-3">
-            <a href="/assets/cert-JS-SoloLearn.png" class="col-12 col-lg-4">
-              <img src="/assets/cert-JS-SoloLearn.png" alt=""class="certif border shadow-sm">
-            </a>
-            <p class="col-12 col-lg-8">Javascript @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
-          </section>
-          <section class="row align-items-center mt-3">
-            <a href="/assets/cert-PHP-SoloLearn.jpg" class="col-12 col-lg-4">
-              <img src="/assets/cert-PHP-SoloLearn.jpg" alt=""class="certif border shadow-sm">
-            </a>
-            <p class="col-12 col-lg-8">PHP @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
-          </section>
+          <div class="row">
+
+            <section class="align-items-center mt-3 col-12 col-lg-6">
+              <a href="/assets/cert-JS-SoloLearn.png">
+                <img src="/assets/cert-JS-SoloLearn.png" alt=""class="certif border shadow-sm">
+              </a>
+              <p>Javascript @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
+            </section>
+
+            <section class="align-items-center mt-3 col-12 col-lg-6">
+              <a href="/assets/cert-PHP-SoloLearn.jpg" class="">
+                <img src="/assets/cert-PHP-SoloLearn.jpg" alt=""class="certif border shadow-sm">
+              </a>
+              <p class="">PHP @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
+            </section>
+
+            <section class="align-items-center mt-3 col-12 col-lg-6">
+              <a href="/assets/cert-HTML-SoloLearn.jpg" class="">
+                <img src="/assets/cert-HTML-SoloLearn.jpg" alt=""class="certif border shadow-sm">
+              </a>
+              <p class="">HTML @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
+            </section>
+
+          </div>
         </aside>
 
 
