add two new certifications

--- a/cv.html
+++ b/cv.html
@@ -230,23 +230,37 @@
 
             <section class="align-items-center mt-3 col-12 col-lg-6">
               <a href="/assets/cert-JS-SoloLearn.png">
-                <img src="/assets/cert-JS-SoloLearn.png" alt=""class="certif border shadow-sm">
+                <img src="/assets/cert-JS-SoloLearn.png" alt="Certification Javascript" class="certif border shadow-sm" title="Certification Javascript ES6 @ Sololearn">
               </a>
-              <p>Javascript @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
+              <p>Javascript ES6 @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
             </section>
 
             <section class="align-items-center mt-3 col-12 col-lg-6">
               <a href="/assets/cert-PHP-SoloLearn.jpg" class="">
-                <img src="/assets/cert-PHP-SoloLearn.jpg" alt=""class="certif border shadow-sm">
+                <img src="/assets/cert-PHP-SoloLearn.jpg" alt="Certification PHP" class="certif border shadow-sm" title="Certification PHP @ Sololearn">
               </a>
               <p class="">PHP @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
             </section>
 
             <section class="align-items-center mt-3 col-12 col-lg-6">
               <a href="/assets/cert-HTML-SoloLearn.jpg" class="">
-                <img src="/assets/cert-HTML-SoloLearn.jpg" alt=""class="certif border shadow-sm">
+                <img src="/assets/cert-HTML-SoloLearn.jpg" alt="Certification HTML5"class="certif border shadow-sm" title="Certification HTML5 @ Sololearn">
               </a>
-              <p class="">HTML @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
+              <p class="">HTML5 @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
+            </section>
+
+            <section class="align-items-center mt-3 col-12 col-lg-6">
+              <a href="/assets/cert-CSS-SoloLearn.jpg" class="">
+                <img src="/assets/cert-CSS-SoloLearn.jpg" alt="Certification CSS3" class="certif border shadow-sm" title="Certification CSS3 @ Sololearn">
+              </a>
+              <p class="">CSS3 @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
+            </section>
+
+            <section class="align-items-center mt-3 col-12 col-lg-6">
+              <a href="https://www.linkedin.com/posts/pierre-loup-perez_linkedinskillassessment-activity-6875003646698909697-8svm" class="" target="_blank">
+                <img src="/assets/Linkedin.svg" alt="Certification HTML5" class="certif border shadow-sm" title="Certification HTML5 @ LinkedIn">
+              </a>
+              <p class="">HTML5 @ <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a></p>
             </section>
 
           </div>
