--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               rounded
               bg-primary bg-opacity-25
             ">
-          <a href="/pilou_art" class="btn btn-secondary">Visitez le site</a>
+          <a href="/pilou_art" class="btn btn-secondary" target="_blank">Visitez le site</a>
           <a href="/projets.html#pilouart" class="btn btn-light">Descriptif</a>
         </div>
       </section>
@@ -171,7 +171,7 @@
               rounded
               bg-primary bg-opacity-25
             ">
-          <a href="https://maitressege.fr" class="btn btn-secondary">Visitez le site</a>
+          <a href="https://maitressege.fr" class="btn btn-secondary" target="_blank">Visitez le site</a>
           <a href="/projets.html#maitressege" class="btn btn-light">Descriptif</a>
         </div>
       </section>
@@ -200,7 +200,7 @@
               rounded
               bg-primary bg-opacity-25
             ">
-          <a href="/index.html" class="btn btn-secondary">Visitez le site</a>
+          <a href="/index.html" class="btn btn-secondary" target="_blank">Visitez le site</a>
           <a href="/projets.html#portfolio" class="btn btn-light">Descriptif</a>
         </div>
       </section>
