add typescript to cv

--- a/cv.html
+++ b/cv.html
@@ -100,23 +100,24 @@
             <p class="col-12 col-lg-5">
               <img src="/assets/html.png" alt="Html" class="icone" title="Html 5">
               <img src="/assets/css.png" alt="Css" class="icone" title="Css 3">
-              <img src="/assets/js.png" alt="Js" class="icone" title="Js">
-              <img src="/assets/php-logo-png-transparent.png" alt="Php" class="icone" title="Php">
-              <img src="/assets/bootstrap-logo.png" alt="bootstrap" class="icone" title="Bootstrap">
               <img src="/assets/tailwind.png" alt="tailwind" class="icone" title="Tailwind Css">
+              <img src="/assets/bootstrap-logo.png" alt="bootstrap" class="icone" title="Bootstrap">
+              <img src="/assets/js.png" alt="Js" class="icone" title="Js">
+              <img src="/assets/typescript.png" alt="typescript" class="icone" title="Typescript">
             </p>
             <p class="col-12 col-lg-4">
               <img src="/assets/nodejs-1-logo.png" alt="NodeJs" class="icone" title="Node Js">
+              <img src="/assets/php-logo-png-transparent.png" alt="Php" class="icone" title="Php">
               <img src="/assets/mysql-5-logo-png-transparent.png" alt="Mysql" class="icone" title="Mysql">
               <img src="/assets/laravel.png" alt="Laravel" class="icone" title="Laravel">
               <img src="/assets/java.png" alt="Java" class="icone" title="Java">
-              <img src="/assets/wordpress_PNG51.png" alt="Wordpress" class="icone" title="Wordpress">
             </p>
           </section>
           <hr class="mx-5">
           <section class="row">
             <h4 class="col-12 col-lg-2">Divers</h4>
             <p class="col-12 col-lg-5">
+              <img src="/assets/wordpress_PNG51.png" alt="Wordpress" class="icone" title="Wordpress">
               <img src="/assets/git.png" alt="git" class="icone" title="Git">
               <img src="/assets/github.png" alt="github" class="icone" title="Github">
               <img src="/assets/vscode-logo-2.png" alt="VsCode" class="icone" title="VsCode">
