--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
   <title>Curriculum Vitae - Pierre-Loup Perez - Web Developper</title>
   <link rel="stylesheet" href="https://bootswatch.com/5/spacelab/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles/style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
   <script src="js/app.js" defer></script>
   <link rel="shortcut icon" href="/assets/favicon.ico" />
   <link rel="icon" href="/assets/android-chrome-192x192.png" sizes="192x192" />
