--- a/mentions.html
+++ b/mentions.html
@@ -11,7 +11,7 @@
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
     />
     <link rel="stylesheet" href="/styles/style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
     <script src="/js/app.js" defer></script>
     <link rel="shortcut icon" href="/assets/favicon.ico" />
     <link rel="icon" href="/assets/android-chrome-192x192.png" sizes="192x192" />
